# lna-es

./: .cursorrules  .dropboxignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HOW_CLAUDE_CODE_INTEGRATION_WORKS.md  LICENSE  LNA-ES-v0.1.md  LNA_ES_v3.0_COMPLETE_ROADMAP.md  Makefile  README.md  README_EN.md  RFC-Process.md  TEAM_COLLABORATION_REQUEST.md  __init__.py  automation_proposal.md  cli-commands.md  control.json  current_directory_structure.txt  docker-compose.yml  graph.sample.json  operator.schema.json  operators.xsd  pyproject.toml  requirements.txt  requirements_checklist.md  ruff.toml  test_sample.txt  アプリの目的.md  要件定義書_v3.2_100.md
.cursor/: 10.maya.md  mcp.json
.github/: PULL_REQUEST_TEMPLATE.md
Docs/: 95percent_method.md  LNA-ES_v3.0_ULTIMATE_REQUIREMENTS.md  github_actions_ci.md  output_format_spec.md  要件定義書v3.0_super.md  要件定義書v3.0_ultra.md  要件定義書v3.1.md
Text/: lina_test_business.txt  lina_test_literature.txt  lina_test_science.txt
automation/: README.md  lina_api.py  maya_api.py  maya_extractor_once.py  restore_fulltext_from_input.py
data/: 268fBcB971E3.json  75819c0b2938.json  7b32F232DeEe.json  9c531bE465C7.json  C9C9A640Ff6f.json  E05eCd299e93.json  E777D2C961Af.json  Ee08200eA615.json  F58c6c7d50B7.json  hamlet_semantic_restored_20250816_192108.txt  hamlet_test_4000chars.txt  hojoki_semantic_restored_2025_20250816_144618.txt  hojoki_semantic_results_2025_20250816_144618.json  hojoki_test_4000chars.txt
(+168 files in other folders)
